[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "connected_vehicle_threat_monitoring_system"
version = "0.1.0"
description = "Monitor vehicle telematics and detect cyber threats in fleets."
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
